--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    vertical-align: top;
 }
 
 
@@ -76,35 +77,33 @@ width: 400px;
     outline: 2px solid red;
 }
 .thirtconteiner9 {
-    float: left;
+    /*float: left;*/
     width: 400px;
     height: 400px;
     display: inline-block;
+    font-size: 16px;
+}
+.thirtconteiner9 + div {
+    width: 800px;
+    display: inline-block;
+    font-size: 20px;
 }
 .thirtconteiner10 {
-    width: 800px;
     height: 200px;
-    float: right;
-    display: inline-block;
+    /*float: right;*/
+
+}
+.thirtconteiner11-one  {
+    font-size: 0;
 }
 .thirtconteiner11 {
     width: 400px;
     height: 200px;
-    vertical-align:bottom;
-    float: left;
+    /*float: left;*/
     display: inline-block;
+    font-size: 16px;
 }
 .thirtconteiner12 {
-    width: 400px;
     height: 100px;
-    vertical-align:bottom;
-    float: right;
-    display: inline-block;
-}
-.thirtconteiner13 {
-    width: 400px;
-    height: 100px;
-    vertical-align:bottom;
-    float: right;
-    display: inline-block;
+    /*float: right;*/
 }
