--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,9 @@ td {
 }
 
 .firstconteiner {
-    font-size: 0;
     width: 1200px;
+    display: flex;
+    flex-direction: row;
 
 }
 
@@ -39,71 +40,76 @@ td {
     outline: 2px solid red;
     width: 400px;
     height: 400px;
-    display: inline-block;
-    font-size: 16px;
 }
 .secondconteiner {
-    font-size: 0;
     width: 1200px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    display: flex;
 }
 
 .secondconteiner div {
     background: greenyellow;
     outline: 2px solid red;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
 }
 .secondconteiner > div {
-    display: inline-block;
+    display: flex;
     width: 800px;
-    font-size: 16px;
-    vertical-align: top 
+    justify-content: flex-start;
+
 }
 .secondconteiner > div > div {
     height: 200px;
     font-size: 16px;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 .secondconteiner > div + div {
 width: 400px;
+flex-wrap: wrap;
+flex-direction: column;
 }
 .secondconteiner > div + div > div {
     height: 133.3px;
 }
 
 .thirtconteiner {
-    font-size: 0;
     width: 1200px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    display: flex;
 }
 .thirtconteiner div {
     background: darkorange;
     outline: 2px solid red;
 }
 .thirtconteiner9 {
-    /*float: left;*/
+    flex-direction:row;
     width: 400px;
     height: 400px;
-    display: inline-block;
     font-size: 16px;
 }
 .thirtconteiner9 + div {
     width: 800px;
-    display: inline-block;
-    font-size: 20px;
 }
 .thirtconteiner10 {
     height: 200px;
-    /*float: right;*/
+    width: 800px;
+    flex-direction: row;
 
 }
 .thirtconteiner11-one  {
-    font-size: 0;
+    flex-wrap: nowrap;
+    display: flex;
 }
 .thirtconteiner11 {
     width: 400px;
     height: 200px;
-    /*float: left;*/
-    display: inline-block;
-    font-size: 16px;
 }
 .thirtconteiner12 {
     height: 100px;
-    /*float: right;*/
 }
